Fixed responsiveness issue with nav. Nav menu collapses to hamburger menu at 991px and displays vertically instead.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,9 @@
 .arrow {
     z-index: 1;
 }
+
+@media screen and (max-width: 575px) {
+    nav {
+        max-width: 100%;
+    }
+};
